--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "@nuxt/image": "^1.1.0",
-    "@nuxtjs/color-mode": "^3.3.2",
-    "@nuxtjs/eslint-module": "^4.1.0",
-    "eslint": "^8.56.0",
-    "less": "^4.2.0",
-    "less-loader": "^11.1.3",
-    "nuxt": "^3.8.2",
-    "nuxt-icon": "^0.6.7",
-    "prettier": "3.1.1",
-    "typescript": "^5.3.3",
-    "vue": "^3.3.10",
-    "vue-router": "^4.2.5",
-    "vue-tsc": "^1.8.25"
-  },
-  "dependencies": {
-    "@nuxt-themes/typography": "^1.0.1",
-    "@nuxt/content": "^2.9.0",
-    "md-editor-v3": "^4.9.0"
-  }
+	"name": "nuxt-app",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "nuxt build",
+		"dev": "nuxt dev",
+		"generate": "nuxt generate",
+		"preview": "nuxt preview",
+		"postinstall": "nuxt prepare"
+	},
+	"devDependencies": {
+		"@element-plus/nuxt": "^1.0.7",
+		"element-plus": "^2.4.4",
+		"eslint": "^8.56.0",
+		"less": "^4.2.0",
+		"prettier": "3.1.1",
+		"typescript": "^5.3.3",
+		"vite": "^5.0.10",
+		"vue-tsc": "^1.8.25"
+	},
+	"dependencies": {
+		"@nuxt/content": "^2.9.0",
+		"@nuxt/image": "^1.1.0",
+		"@nuxtjs/color-mode": "^3.3.2",
+		"@types/ali-oss": "^6.16.11",
+		"ali-oss": "^6.19.0",
+		"md-editor-v3": "^4.9.0",
+		"mysql2": "^3.6.5",
+		"nuxt": "^3.8.2",
+		"nuxt-icon": "^0.6.7",
+		"vue": "^3.3.10",
+		"vue-router": "^4.2.5"
+	}
 }
