--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,7 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
+  "extends": "./.nuxt/tsconfig.json",
   "compilerOptions": {
-    "typeRoots": [
-      "./node_modules/@types"
-    ]
-  },
-  "extends": "./.nuxt/tsconfig.json"
+    "allowImportingTsExtensions": true
+  }
 }
