--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
 		"@nuxt/image": "^1.1.0",
 		"@nuxtjs/color-mode": "^3.3.2",
 		"@types/ali-oss": "^6.16.11",
-		"ali-oss": "^6.19.0",
+		"@vue/server-renderer": "^3.4.5",
 		"md-editor-v3": "^4.9.0",
 		"mysql2": "^3.6.5",
 		"nuxt": "^3.8.2",
 		"nuxt-icon": "^0.6.7",
-		"vue": "^3.3.10",
+		"vue": "^3.4.5",
 		"vue-router": "^4.2.5"
 	}
 }
